--load project bug-fix

--- a/frontend/pages/project/project.css
+++ b/frontend/pages/project/project.css
@@ -69,6 +69,10 @@
     --bs-btn-active-border-color: #013a63;
 }
 
+.btn-bg-primary-core {
+    background-color: #0c6efdff;
+}
+
 .bd-mode-toggle {
     z-index: 1500;
 }
