--- a/frontend/pages/project/project.css
+++ b/frontend/pages/project/project.css
@@ -93,6 +93,22 @@
 }
 
 #myChart {
-    width: 100%; /* Занимает всю ширину контейнера */
-    height: 100%; /* Занимает всю высоту контейнера */
+    width: 100%;
+    height: 100%;
+}
+
+# donut-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    max-width: 600px;
+    max-height: 600px;
+    margin: auto;
+}
+
+#donutChart {
+    width: 100%;
+    height: 100%;
 }
