--- a/backend/core/dataholder/templates/project.html
+++ b/backend/core/dataholder/templates/project.html
@@ -16,8 +16,8 @@
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
             crossorigin="anonymous"
         />
-        <link rel="stylesheet" href="{% static 'dataholder/css/project.css' %}" />
-        <link rel="stylesheet" href="{% static 'dataholder/css/project-list-groups.css' %}">
+        <link rel="stylesheet" href="{% static 'css/project.css' %}" />
+        <link rel="stylesheet" href="{% static 'css/project-list-groups.css' %}">
     </head>
     <body>
         <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
@@ -343,15 +343,15 @@
             crossorigin="anonymous"
         ></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-        <script src="{% static 'dataholder/js/scripts/conclusion.js' %}"></script>
-        <script src="{% static 'dataholder/js/scripts/reasons.js' %}" defer></script>
-        <script src="{% static 'dataholder/js/scripts/selector.js' %}" defer></script>
-        <script src="{% static 'dataholder/js/scripts/theme-toggle.js' %}"></script>
-        <script src="{% static 'dataholder/js/charts/firstchart.js' %}"></script>
-        <script src="{% static 'dataholder/js/charts/donutchart.js' %}"></script>
-        <script src="{% static 'dataholder/js/charts/horizontal.js' %}"></script>
-        <script src="{% static 'dataholder/js/charts/radarchart.js' %}"></script>
-        <script src="{% static 'dataholder/js/charts/linechart.js' %}"></script>
-        <script src="{% static 'dataholder/js/charts/modalchart1.js' %}"></script>
+        <script src="{% static 'js/scripts/conclusion.js' %}"></script>
+        <script src="{% static 'js/scripts/reasons.js' %}" defer></script>
+        <script src="{% static 'js/scripts/selector.js' %}" defer></script>
+        <script src="{% static 'js/scripts/theme-toggle.js' %}"></script>
+        <script src="{% static 'js/charts/firstchart.js' %}"></script>
+        <script src="{% static 'js/charts/donutchart.js' %}"></script>
+        <script src="{% static 'js/charts/horizontal.js' %}"></script>
+        <script src="{% static 'js/charts/radarchart.js' %}"></script>
+        <script src="{% static 'js/charts/linechart.js' %}"></script>
+        <script src="{% static 'js/charts/modalchart1.js' %}"></script>
     </body>
 </html>
