--- a/backend/core/dataholder/templates/project.html
+++ b/backend/core/dataholder/templates/project.html
@@ -142,7 +142,7 @@
                 <div class="col-md-6 mb-4">
                   <div class="h-100 p-5 bg-body-tertiary border rounded-3">
                     <div class="donut-container">
-                        <canvas id="donutChart"></canvas>
+                        <canvas id="donutChart" data-project-number="{{ project.project_number }}"></canvas>
                     </div>
                   </div>
                 </div>
