--- a/backend/core/dataholder/templates/project.html
+++ b/backend/core/dataholder/templates/project.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>{{ project.name }}</title>
+        <title id="project-title">Loading...</title>
         <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/album/">
         <link
             rel="stylesheet"
@@ -344,6 +344,7 @@
         ></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script src="{% static 'js/scripts/conclusion.js' %}"></script>
+        <script src="{% static 'js/scripts/dataloader.js' %}"></script>
         <script src="{% static 'js/scripts/reasons.js' %}" defer></script>
         <script src="{% static 'js/scripts/selector.js' %}" defer></script>
         <script src="{% static 'js/scripts/theme-toggle.js' %}"></script>
