--- a/backend/core/dataholder/templates/project.html
+++ b/backend/core/dataholder/templates/project.html
@@ -74,15 +74,15 @@
         <div class="container py-4">
             <header class="pb-3 mb-4 border-bottom">
             <a href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
-                <span class="fs-4">project #640024</span>
+                <span id="project-number" class="fs-4">project #Loading</span>
             </a>
             </header>
 
             <section class="py-5 text-center container">
               <div class="row py-lg-5">
                 <div class="col-lg-6 col-md-8 mx-auto">
-                  <h1 class="fw-light">ogo project</h1>
-                  <p class="lead text-body-secondary">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+                  <h1 id="main-project-title" class="fw-light">Loading...</h1>
+                  <p id="main-description" class="lead text-body-secondary">Loading...</p>
                   <p>
                     <span class="badge text-bg-primary rounded-pill">Технологии</span>
                     <span class="badge text-bg-secondary rounded-pill">Искусственный интеллект</span>
