--load span golders

--- a/backend/core/dataholder/templates/project.html
+++ b/backend/core/dataholder/templates/project.html
@@ -84,8 +84,8 @@
                   <h1 id="main-project-title" class="fw-light">Loading...</h1>
                   <p id="main-description" class="lead text-body-secondary">Loading...</p>
                   <p>
-                    <span class="badge text-bg-primary rounded-pill">Технологии</span>
-                    <span class="badge text-bg-secondary rounded-pill">Искусственный интеллект</span>
+                    <span id="span-container-1" class="badge text-bg-primary rounded-pill">Технологии</span>
+                    <span id="span-container-2" class="badge text-bg-secondary rounded-pill">Искусственный интеллект</span>
                   </p>
                 </div>
               </div>
