--- a/backend/core/dataholder/templates/project.html
+++ b/backend/core/dataholder/templates/project.html
@@ -132,7 +132,7 @@
               <div class="col-md-6">
                 <div class="h-100 p-3 bg-body-tertiary border rounded-3">
                     <div id="chart-container">
-                        <canvas id="myChart"></canvas>
+                        <canvas id="myChart" data-project-number="{{ project.project_number }}"></canvas>
                     </div>
                 </div>
               </div>
