--- a/backend/core/dataholder/templates/project.html
+++ b/backend/core/dataholder/templates/project.html
@@ -94,7 +94,7 @@
             <div class="p-5 mb-4 bg-body-tertiary rounded-3">
               <div class="container-fluid py-3" id="dynamic-conclusion">
                 <h1 class="display-5 fw-bold">Краткая характеристика</h1>
-                <p class="col-md-8 fs-4" data-index="0" data-project-number="{{ project.project_number }}">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
+                <p class="col-md-8 fs-4" data-index="0">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
               </div>
             </div>
 
