--- a/backend/core/dataholder/templates/project.html
+++ b/backend/core/dataholder/templates/project.html
@@ -82,6 +82,7 @@
               <div class="row py-lg-5">
                 <div class="col-lg-6 col-md-8 mx-auto">
                   <h1 id="main-project-title" class="fw-light">Loading...</h1>
+                  <p id="main-mini-team-text" class="text-sm text-body-secondary">Loading...</p>
                   <p id="main-description" class="lead text-body-secondary">Loading...</p>
                   <p>
                     <span id="span-container-1" class="badge text-bg-primary rounded-pill">Технологии</span>
