--- a/backend/core/dataholder/templates/project.html
+++ b/backend/core/dataholder/templates/project.html
@@ -346,7 +346,7 @@
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script src="{% static 'js/scripts/conclusion.js' %}"></script>
         <script src="{% static 'js/scripts/dataloader.js' %}"></script>
-        <script src="{% static 'js/scripts/reasons.js' %}" defer></script>
+        <script src="{% static 'js/scripts/reasons.js' %}?v=00001" defer></script>
         <script src="{% static 'js/scripts/selector.js' %}" defer></script>
         <script src="{% static 'js/scripts/theme-toggle.js' %}"></script>
         <script src="{% static 'js/charts/firstchart.js' %}"></script>
