--update radar chart

--- a/backend/core/dataholder/templates/project.html
+++ b/backend/core/dataholder/templates/project.html
@@ -352,7 +352,7 @@
         <script src="{% static 'js/charts/firstchart.js' %}"></script>
         <script src="{% static 'js/charts/donutchart.js' %}"></script>
         <script src="{% static 'js/charts/horizontal.js' %}"></script>
-        <script src="{% static 'js/charts/radarchart.js' %}"></script>
+        <script src="{% static 'js/charts/radarchart.js' %}?v=00001"></script>
         <script src="{% static 'js/charts/linechart.js' %}"></script>
         <script src="{% static 'js/charts/modalchart1.js' %}"></script>
     </body>
