--- a/backend/core/dataholder/templates/project.html
+++ b/backend/core/dataholder/templates/project.html
@@ -268,7 +268,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
               </div>
               <div class="modal-body">
-                  <div class="chart-container" style="min-height: 400px; width: 100%;">
+                  <div class="chart-container" style="min-height: 400px; width: 100%; height: 100%;">
                       <canvas id="modalChart1"></canvas>
                   </div>
               </div>
@@ -351,7 +351,7 @@
         <script src="{% static 'js/scripts/theme-toggle.js' %}"></script>
         <script src="{% static 'js/charts/firstchart.js' %}"></script>
         <script src="{% static 'js/charts/donutchart.js' %}"></script>
-        <script src="{% static 'js/charts/horizontal.js' %}"></script>
+        <script src="{% static 'js/charts/horizontal.js' %}?v=00001"></script>
         <script src="{% static 'js/charts/radarchart.js' %}?v=00001"></script>
         <script src="{% static 'js/charts/linechart.js' %}"></script>
         <script src="{% static 'js/charts/modalchart1.js' %}"></script>
