--load horizntal bug fix

--- a/backend/core/dataholder/templates/project.html
+++ b/backend/core/dataholder/templates/project.html
@@ -222,8 +222,8 @@
             <div class="row align-items-md-stretch time-series-predictions">
                 <div class="col-md-6 mb-4">
                     <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-                        <div class="donut-container">
-                            <canvas id="horizontalChart" width="400" height="325"></canvas>
+                        <div class="donut-container ">
+                            <canvas id="horizontalChart" style="width: 100%; min-height: 370px; max-height: 450px;"></canvas>
                         </div>
                     </div>
                 </div>
