--load modal chart

--- a/backend/core/dataholder/templates/project.html
+++ b/backend/core/dataholder/templates/project.html
@@ -259,7 +259,7 @@
             </footer>
         </div>
 
-        <!-- Модальное окно с грфиком -->
+        <!-- Модальное окно с грaфиком -->
         <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog modal-lg">
             <div class="modal-content">
@@ -354,6 +354,6 @@
         <script src="{% static 'js/charts/horizontal.js' %}?v=00001"></script>
         <script src="{% static 'js/charts/radarchart.js' %}?v=00001"></script>
         <script src="{% static 'js/charts/linechart.js' %}"></script>
-        <script src="{% static 'js/charts/modalchart1.js' %}"></script>
+        <script src="{% static 'js/charts/modalchart1.js' %}?v=00001"></script>
     </body>
 </html>
