--- a/backend/core/dataholder/templates/project.html
+++ b/backend/core/dataholder/templates/project.html
@@ -353,7 +353,7 @@
         <script src="{% static 'js/charts/donutchart.js' %}"></script>
         <script src="{% static 'js/charts/horizontal.js' %}?v=00001"></script>
         <script src="{% static 'js/charts/radarchart.js' %}?v=00001"></script>
-        <script src="{% static 'js/charts/linechart.js' %}"></script>
+        <script src="{% static 'js/charts/linechart.js' %}?v=00001"></script>
         <script src="{% static 'js/charts/modalchart1.js' %}?v=00001"></script>
     </body>
 </html>
