--- a/backend/core/dataholder/templates/project.html
+++ b/backend/core/dataholder/templates/project.html
@@ -118,7 +118,7 @@
                         <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios3" value="synth">
                         <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios3">
                             Синтетические предсказания
-                            <span class="d-block small opacity-50">Пока эта опция в разработке</span>
+                            <span class="d-block small opacity-50">Предсказания, основанные на синтетическом датасете</span>
                         </label>
 
                         <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios4" value="" disabled>
@@ -267,7 +267,7 @@
             <div class="row align-items-md-stretch synth-predictions">
                 <div class="col-md-6 mb-4 h-100">
                     <div class="d-flex flex-column flex-md-row align-items-center justify-content-center">
-                      <div class="list-group w-100 h-100" id="dynamic-texts">
+                      <div class="list-group w-100 h-100" id="synth-texts">
                         <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
                           <div class="d-flex gap-2 w-100 justify-content-between">
                             <div>
@@ -426,8 +426,8 @@
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script src="{% static 'js/scripts/conclusion.js' %}"></script>
         <script src="{% static 'js/scripts/dataloader.js' %}"></script>
-        <script src="{% static 'js/scripts/reasons.js' %}?v=00001" defer></script>
-        <script src="{% static 'js/scripts/selector.js' %}?v=00001" defer></script>
+        <script src="{% static 'js/scripts/reasons.js' %}?v=00002"></script>
+        <script src="{% static 'js/scripts/selector.js' %}?v=00001"></script>
         <script src="{% static 'js/scripts/theme-toggle.js' %}"></script>
         <script src="{% static 'js/charts/firstchart.js' %}"></script>
         <script src="{% static 'js/charts/donutchart.js' %}"></script>
@@ -436,5 +436,6 @@
         <script src="{% static 'js/charts/linechart.js' %}?v=00001"></script>
         <script src="{% static 'js/charts/modalchart1.js' %}?v=00001"></script>
         <script src="{% static 'js/charts/donutchart2.js' %}"></script>
+        <script src="{% static 'js/scripts/reasons2.js' %}?v=00001"></script>
     </body>
 </html>
