--- a/backend/core/dataholder/templates/project.html
+++ b/backend/core/dataholder/templates/project.html
@@ -320,7 +320,7 @@
                 <div class="col-md-6 mb-4">
                     <div class="h-100 p-2 bg-body-tertiary border rounded-3">
                         <div class="radar-containert">
-                            <canvas id="radarChart" style="max-height: 450px;"></canvas>
+                            <canvas id="synth-radarChart" style="max-height: 450px;"></canvas>
                         </div>
                     </div>
                 </div>
@@ -437,5 +437,6 @@
         <script src="{% static 'js/charts/modalchart1.js' %}?v=00001"></script>
         <script src="{% static 'js/charts/donutchart2.js' %}"></script>
         <script src="{% static 'js/scripts/reasons2.js' %}?v=00003"></script>
+        <script src="{% static 'js/charts/radarchart2.js' %}"></script>
     </body>
 </html>
