--update synth block

--- a/backend/core/dataholder/templates/project.html
+++ b/backend/core/dataholder/templates/project.html
@@ -257,8 +257,8 @@
 
                 <div class="col-md-6 mb-4">
                     <div class="h-100 p-5 border rounded-3">
-                        <h2 class="mb-5">Основные предсказания</h2>
-                        <p style="text-align: justify;">Модели, обученные на несинтетических данных, обеспечат наиболее точные прогнозы.</p>
+                        <h3 class="mb-3">Синтетические предсказания</h3>
+                        <p style="text-align: justify;">Модели, обученные на синтетических данных, могут помочь расширить возможное впечатление о будущем стартапа. Синтектические датасеты собраны с большим количеством характеристик.</p>
                         <p style="text-align: justify;">Ниже можно ознакомиться с результатами предсказанных характеристик. Для каждого показателя написан микровывод и возможный сценарий его дальнейшего развития. Дополнительно представлен график для демонстрации изменения характеристик с течением времени.</p>
                     </div>
                 </div>
