--- a/backend/core/dataholder/templates/project.html
+++ b/backend/core/dataholder/templates/project.html
@@ -435,7 +435,7 @@
         <script src="{% static 'js/charts/radarchart.js' %}?v=00001"></script>
         <script src="{% static 'js/charts/linechart.js' %}?v=00001"></script>
         <script src="{% static 'js/charts/modalchart1.js' %}?v=00001"></script>
-        <script src="{% static 'js/charts/donutchart2.js' %}"></script>
+        <script src="{% static 'js/charts/donutchart2.js' %}?v=00001"></script>
         <script src="{% static 'js/scripts/reasons2.js' %}?v=00003"></script>
         <script src="{% static 'js/charts/radarchart2.js' %}"></script>
     </body>
