--- a/backend/core/dataholder/templates/project.html
+++ b/backend/core/dataholder/templates/project.html
@@ -121,8 +121,8 @@
                             <span class="d-block small opacity-50">Предсказания, основанные на синтетическом датасете</span>
                         </label>
 
-                        <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios4" value="" disabled>
-                        <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios3">
+                        <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios4" value="synth-time-series">
+                        <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios4">
                             Синтетические предсказания на временных рядах
                             <span class="d-block small opacity-50">Предсказания, основанные на синтетическом датасете</span>
                         </label>
@@ -322,6 +322,33 @@
                         <div class="radar-containert">
                             <canvas id="synth-radarChart" style="max-height: 450px;"></canvas>
                         </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row align-items-md-stretch synth-time-series-predictions">
+                <div class="col-md-6 mb-4">
+                    <div class="h-100 p-5 bg-body-tertiary border rounded-3">
+                        <div class="donut-container ">
+                            <canvas id="horizontalChart" style="width: 100%; min-height: 370px; max-height: 450px;"></canvas>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 mb-4">
+                    <div class="h-100 p-5 border rounded-3">
+                        <h2 class="mb-4">Динамика характеристик</h2>
+                        <p style="text-align: justify;">Вы можете изучить прогнозируемую динамику ряда показателей, основанную на временных рядах.</p>
+                        <p style="text-align: justify;">В модальном окне доступны графики изменений этих показателей со временем, включая такие характеристики, как социальный индекс (social_idx), индекс спроса (demand_idx) и индекс конкурентоспособности (comp_idx).</p>
+                        <button class="col-md-6 mt-4 btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#myModal" type="button">Посмотреть</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="p-5 mb-4 bg-body-tertiary rounded-3 synth-time-series-predictions">
+                <div class="container-fluid py-2">
+                    <div class="line-container" style="min-height: 400px; width: 100%;">
+                        <canvas id="lineChart"></canvas>
                     </div>
                 </div>
             </div>
