--load synth-chart

--- a/backend/core/dataholder/templates/project.html
+++ b/backend/core/dataholder/templates/project.html
@@ -329,8 +329,8 @@
             <div class="row align-items-md-stretch synth-time-series-predictions">
                 <div class="col-md-6 mb-4">
                     <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-                        <div class="donut-container ">
-                            <canvas id="horizontalChart" style="width: 100%; min-height: 370px; max-height: 450px;"></canvas>
+                        <div class="donut-container">
+                            <canvas id="horizontalChart2" style="width: 100%; min-height: 370px; max-height: 450px;"></canvas>
                         </div>
                     </div>
                 </div>
@@ -465,5 +465,6 @@
         <script src="{% static 'js/charts/donutchart2.js' %}?v=00001"></script>
         <script src="{% static 'js/scripts/reasons2.js' %}?v=00003"></script>
         <script src="{% static 'js/charts/radarchart2.js' %}"></script>
+        <script src="{% static 'js/charts/horizontal2.js' %}"></script>
     </body>
 </html>
