--load ful ready page

--- a/backend/core/dataholder/templates/project.html
+++ b/backend/core/dataholder/templates/project.html
@@ -348,7 +348,7 @@
             <div class="p-5 mb-4 bg-body-tertiary rounded-3 synth-time-series-predictions">
                 <div class="container-fluid py-2">
                     <div class="line-container" style="min-height: 400px; width: 100%;">
-                        <canvas id="lineChart"></canvas>
+                        <canvas id="lineChart2"></canvas>
                     </div>
                 </div>
             </div>
@@ -481,6 +481,7 @@
         <script src="{% static 'js/charts/horizontal.js' %}?v=00001"></script>
         <script src="{% static 'js/charts/radarchart.js' %}?v=00001"></script>
         <script src="{% static 'js/charts/linechart.js' %}?v=00001"></script>
+        <script src="{% static 'js/charts/linechart2.js' %}"></script>
         <script src="{% static 'js/charts/modalchart1.js' %}?v=00001"></script>
         <script src="{% static 'js/charts/modalchart2.js' %}"></script>
         <script src="{% static 'js/charts/donutchart2.js' %}?v=00001"></script>
