--wrkd checokt form

--- a/appbuild/app/core/dataholder/templates/checkout.html
+++ b/appbuild/app/core/dataholder/templates/checkout.html
@@ -148,7 +148,7 @@
                                     <label for="Description" class="form-label">Краткое описание проекта</label>
                                     <div class="input-group has-validation">
                                         <span class="input-group-text">&</span>
-                                        <input type="text" class="form-control" id="Description" placeholder="Description"/>
+                                        <input type="text" class="form-control" id="Description" placeholder="Description" required/>
                                     </div>
                                 <hr class="my-4" />
                                 </div>
@@ -355,6 +355,6 @@
             crossorigin="anonymous"
         ></script>
         <script src="{% static 'js/scripts/theme-toggle.js' %}"></script>
-        <script src="{% static 'js/scripts/checkout.js' %}"></script
+        <script src="{% static 'js/scripts/checkout.js' %}?v=00002"></script
     </body>
 </html>
