--load mini view test checkout

--- a/appbuild/app/core/dataholder/templates/project.html
+++ b/appbuild/app/core/dataholder/templates/project.html
@@ -340,7 +340,7 @@
                         <h2 class="mb-4">Динамика характеристик</h2>
                         <p style="text-align: justify;">Вы можете изучить прогнозируемую динамику ряда показателей, основанную на временных рядах.</p>
                         <p style="text-align: justify;">В модальном окне доступны графики изменений этих показателей со временем, включая такие характеристики, как социальный индекс (social_idx), индекс спроса (demand_idx) и индекс конкурентоспособности (comp_idx).</p>
-                        <button class="col-md-6 mt-4 btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#myModal" type="button">Посмотреть</button>
+                        <button class="col-md-6 mt-4 btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#myModal2" type="button">Посмотреть</button>
                     </div>
                 </div>
             </div>
@@ -357,7 +357,7 @@
                 <div class="container-fluid py-5">
                     <h1 class="display-5 fw-bold">Что означают метрики?</h1>
                     <p class="col-md-8 fs-4">Представленные модели обучены на специальных метриках, индексах. Вы можете ознакомиться с ними с ними, перейдя по ссылке ниже.</p>
-                    <button class="btn btn-primary btn-lg" data-bs-toggle="modal2" data-bs-target="#readmeModal" type="button">Посмотреть метрики</button>
+                    <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#readmeModal" type="button">Посмотреть метрики</button>
                 </div>
             </div>
 
@@ -391,8 +391,8 @@
           <div class="modal-dialog modal-lg">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Динамика характеристик</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal2" aria-label="Закрыть"></button>
+                <h5 class="modal-title" id="exampleModalLabel">Синтетическая динамика характеристик</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
               </div>
               <div class="modal-body">
                   <div class="chart-container" style="min-height: 400px; width: 100%; height: 100%;">
@@ -400,7 +400,7 @@
                   </div>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal2">Закрыть</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
               </div>
             </div>
           </div>
