--- a/appbuild/app/core/dataholder/templates/projectlist.html
+++ b/appbuild/app/core/dataholder/templates/projectlist.html
@@ -77,14 +77,16 @@
             <form class="col-10 col-lg-10 mb-3 mx-auto" role="search">
               <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
             </form>
+            <div class="project-container col-10 col-lg-10 mx-auto">
+                <p>ksdfjgsdkfg</p>
+            </div>
         </div>
 
         <footer class="my-5 pt-5 text-body-secondary text-center text-small">
-            <p class="mb-1">&copy; 2017–2024 Company Name</p>
+            <p class="mb-1">&copy; 2025 StartupMLModel</p>
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="#">Privacy</a></li>
-                <li class="list-inline-item"><a href="#">Terms</a></li>
-                <li class="list-inline-item"><a href="#">Support</a></li>
+                <li class="list-inline-item"><a href="#">Главная</a></li>
+                <li class="list-inline-item"><a href="#">Создать проект</a></li>
             </ul>
         </footer>
         <script
