--- a/appbuild/app/core/dataholder/templates/checkout.html
+++ b/appbuild/app/core/dataholder/templates/checkout.html
@@ -338,9 +338,8 @@
             <footer class="my-5 pt-5 text-body-secondary text-center text-small">
                 <p class="mb-1">&copy; 2017–2024 Company Name</p>
                 <ul class="list-inline">
-                    <li class="list-inline-item"><a href="#">Privacy</a></li>
-                    <li class="list-inline-item"><a href="#">Terms</a></li>
-                    <li class="list-inline-item"><a href="#">Support</a></li>
+                    <li class="list-inline-item"><a href="#">Главная</a></li>
+                    <li class="list-inline-item"><a href="#">Создать проект</a></li>
                 </ul>
             </footer>
         </div>
