--- a/appbuild/app/core/dataholder/templates/projectlist.html
+++ b/appbuild/app/core/dataholder/templates/projectlist.html
@@ -75,12 +75,41 @@
 
         <div class="container py-4">
             <form class="col-10 col-lg-10 mb-3 mx-auto" role="search">
-              <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
+                <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
             </form>
             <div class="project-container col-10 col-lg-10 mx-auto">
-                <p>ksdfjgsdkfg</p>
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4 mb-3">
+                        <div class="card border-secondary h-100">
+                            <div class="card-header">Заголовок</div>
+                            <div class="card-body text-secondary">
+                                <h5 class="card-title">Название дополнительной карты</h5>
+                                <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и составлять основную часть содержимого карты.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 mb-3">
+                        <div class="card border-secondary h-100">
+                            <div class="card-header">Заголовок</div>
+                            <div class="card-body text-secondary">
+                                <h5 class="card-title">Название дополнительной карты</h5>
+                                <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и составлять основную часть содержимого карты.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 mb-3">
+                        <div class="card border-secondary h-100">
+                            <div class="card-header">Заголовок</div>
+                            <div class="card-body text-secondary">
+                                <h5 class="card-title">Название дополнительной карты</h5>
+                                <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и составлять основную часть содержимого карты.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+
 
         <footer class="my-5 pt-5 text-body-secondary text-center text-small">
             <p class="mb-1">&copy; 2025 StartupMLModel</p>
