--- a/appbuild/app/core/dataholder/templates/projectlist.html
+++ b/appbuild/app/core/dataholder/templates/projectlist.html
@@ -80,38 +80,98 @@
             <div class="project-container col-10 col-lg-10 mx-auto">
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-4 mb-3">
-                        <div class="card border-secondary h-100">
-                            <div class="card-header">Заголовок</div>
+                        <div class="card border h-100">
+                            <div class="card-header">Lil nas X project</div>
                             <div class="card-body text-secondary">
-                                <h5 class="card-title">Название дополнительной карты</h5>
-                                <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и составлять основную часть содержимого карты.</p>
+                                <h6 class="card-subtitle text-muted mb-2">Lil nas X</h6>
+                                <p class="card-text">Тут идет описание проекта, его краткое description. Нужно сделать ограничение...</p>
+                                <div class="text-muted">
+                                    <h6>Тема стартапа</h6>
+                                    <h6>Категория</h6>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 mb-3">
-                        <div class="card border-secondary h-100">
-                            <div class="card-header">Заголовок</div>
+                        <div class="card border h-100">
+                            <div class="card-header">Lil nas X project</div>
                             <div class="card-body text-secondary">
-                                <h5 class="card-title">Название дополнительной карты</h5>
-                                <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и составлять основную часть содержимого карты.</p>
+                                <h6 class="card-subtitle text-muted mb-2">Lil nas X</h6>
+                                <p class="card-text">Тут идет описание проекта, его краткое description. Нужно сделать ограничение...</p>
+                                <div class="text-muted">
+                                    <h6>Тема стартапа</h6>
+                                    <h6>Категория</h6>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 mb-3">
-                        <div class="card border-secondary h-100">
-                            <div class="card-header">Заголовок</div>
+                        <div class="card border h-100">
+                            <div class="card-header">Lil nas X project</div>
                             <div class="card-body text-secondary">
-                                <h5 class="card-title">Название дополнительной карты</h5>
-                                <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и составлять основную часть содержимого карты.</p>
+                                <h6 class="card-subtitle text-muted mb-2">Lil nas X</h6>
+                                <p class="card-text">Тут идет описание проекта, его краткое description. Нужно сделать ограничение...</p>
+                                <div class="text-muted">
+                                    <h6>Тема стартапа</h6>
+                                    <h6>Категория</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 mb-3">
+                        <div class="card border h-100">
+                            <div class="card-header">Lil nas X project</div>
+                            <div class="card-body text-secondary">
+                                <h6 class="card-subtitle text-muted mb-2">Lil nas X</h6>
+                                <p class="card-text">Тут идет описание проекта, его краткое description. Нужно сделать ограничение...</p>
+                                <div class="text-muted">
+                                    <h6>Тема стартапа</h6>
+                                    <h6>Категория</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 mb-3">
+                        <div class="card border h-100">
+                            <div class="card-header">Lil nas X project</div>
+                            <div class="card-body text-secondary">
+                                <h6 class="card-subtitle text-muted mb-2">Lil nas X</h6>
+                                <p class="card-text">Тут идет описание проекта, его краткое description. Нужно сделать ограничение...</p>
+                                <div class="text-muted">
+                                    <h6>Тема стартапа</h6>
+                                    <h6>Категория</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 mb-3">
+                        <div class="card border h-100">
+                            <div class="card-header">Lil nas X project</div>
+                            <div class="card-body text-secondary">
+                                <h6 class="card-subtitle text-muted mb-2">Lil nas X</h6>
+                                <p class="card-text">Тут идет описание проекта, его краткое description. Нужно сделать ограничение...</p>
+                                <div class="text-muted">
+                                    <h6>Тема стартапа</h6>
+                                    <h6>Категория</h6>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <nav aria-label="...">
+              <ul class="pagination justify-content-center pt-2">
+                    <li class="page-item active" aria-current="page">
+                        <span class="page-link">1</span>
+                    </li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+              </ul>
+            </nav>
         </div>
 
-
-        <footer class="my-5 pt-5 text-body-secondary text-center text-small">
+        <footer class="pt-4 text-body-secondary text-center text-small">
             <p class="mb-1">&copy; 2025 StartupMLModel</p>
             <ul class="list-inline">
                 <li class="list-inline-item"><a href="#">Главная</a></li>
