--- a/appbuild/app/core/dataholder/templates/projectlist.html
+++ b/appbuild/app/core/dataholder/templates/projectlist.html
@@ -20,6 +20,11 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="{% static 'css/checkout.css' %}" >
+        <style>
+            .project-card {
+                cursor: pointer;
+            }
+        </style>
     </head>
     <body>
         <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
