--load wrkd search system

--- a/app/core/dataholder/templates/projectlist.html
+++ b/app/core/dataholder/templates/projectlist.html
@@ -80,7 +80,7 @@
 
         <div class="container py-4">
             <form class="col-10 col-lg-10 mb-3 mx-auto" role="search">
-                <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
+                <input type="search" id="searchInput" class="form-control" placeholder="Search..." aria-label="Search">
             </form>
             <div class="project-container col-10 col-lg-10 mx-auto">
                 <div class="row" id="project-list">
@@ -113,7 +113,7 @@
             integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
             crossorigin="anonymous"
         ></script>
-        <script src="{% static 'js/scripts/pagination.js' %}"></script>
+        <script src="{% static 'js/scripts/pagination.js' %}?v=00001"></script>
         <script src="{% static 'js/scripts/theme-toggle.js' %}"></script>
     </body>
 </html>
