--- a/app/core/dataholder/templates/checkout.html
+++ b/app/core/dataholder/templates/checkout.html
@@ -88,6 +88,7 @@
                     <div class="col-md-10 col-lg-10">
                         <h4 class="mb-3">Основная информация</h4>
                         <form class="needs-validation" novalidate>
+                            {% csrf_token %}
                             <hr class="my-4" />
                             <div class="row g-3">
                                 <div class="col-sm-6">
@@ -354,6 +355,6 @@
             crossorigin="anonymous"
         ></script>
         <script src="{% static 'js/scripts/theme-toggle.js' %}"></script>
-        <script src="{% static 'js/scripts/checkout.js' %}?v=00004"></script
+        <script src="{% static 'js/scripts/checkout.js' %}?v=00006"></script
     </body>
 </html>
