--- a/app/core/dataholder/templates/checkout.html
+++ b/app/core/dataholder/templates/checkout.html
@@ -355,6 +355,7 @@
             crossorigin="anonymous"
         ></script>
         <script src="{% static 'js/scripts/theme-toggle.js' %}"></script>
-        <script src="{% static 'js/scripts/checkout.js' %}?v=00006"></script
+        <script src="{% static 'js/scripts/checkout.js' %}?v=00006"></script>
+        <!-- Короче, пока работает на 00006 -->
     </body>
 </html>
